<resources>
    <string name="app_name">بي هاند</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="services">الخدمات</string>
    <string name="offers">العروض</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="social_media">وسائل التواصل الاجتماعي</string>
    <string name="facebook">فيس بوك</string>
    <string name="youtube">يوتيوب</string>
    <string name="order_now">اطلب الآن</string>
    <string name="name">الاسم</string>
    <string name="happy_to_contact">نسعد بتواصلكم:</string>
    <string name="email">البريد الالكتروني</string>
    <string name="phone">الهاتف</string>
    <string name="your_msg">رسالتك</string>
    <string name="send">ارسال</string>
    <string name="notes_mandatory">ملحوظات أخرى: *</string>
    <string name="date_mandatory">اليوم والميعاد المطلوب: *</string>
    <string name="address_mandatory">العنوان: *</string>
    <string name="mobile_mandatory">الموبايل: *</string>
    <string name="name_mandatory">الاسم: *</string>
    <string name="order_summary">ملخص الطلب</string>
    <string name="enter_contact_details">ادخل بيانات الاتصال</string>
    <string name="city_prompt">المدينة: *</string>
    <string name="village_prompt">المنطقة: *</string>
    <string name="agree_for_terms_checkbox">أوافق على</string>
    <string name="home">الرئيسية</string>
    <string name="more">للمزيد</string>
    <string name="for_continue">للمتابعة</string>
    <string name="error_msg">حدث خطأ أثناء تحميل البيانات\n من فضلك تأكد من اتصالك بالانترنت وحاول مرة أخرى</string>
    <string name="not_available">لا تتوفر هذه الخدمة حاليا</string>
    <string name="required_field">هذه الخانة مطلوبة</string>
    <string name="send_error">حدث خطأأثناء الارسال .. من فضلك حاول مرة أخرى</string>
    <string name="msg_sent_successfully">تم ارسال رسالتك بنجاح، سوف يتم الرد عليك في أقرب وقت</string>
    <string name="city_village_required">يجب ان تختار المدينة والقرية التابع لها</string>
    <string name="conditions_terms_check">يجب ان توافق على الشروط والأحكام</string>
    <string name="order_sent_successfully"> تم إرسال طلبكم بنجاح ، سنتواصل معكم فى أقرب وقت لتأكيد الطلب وتأكيد الميعاد</string>
    <string name="join_as_technical">الانضمام كفني</string>
    <string name="granted_title">كيف أضمن الفنيين والأمانة؟</string>
    <string name="granted_content">جميع الفنيين و الشركات المتعاقدين مع بى هاند بياناتهم مسجلة بالكامل و موقع معهم عقود تضمن حقوق العملاء. ولكن يرجي العلم أنه في حالة التعامل مباشرة مع الفني بدون علم الشركة فأن الشركة تصبح غير مسؤله عن أي مشكلة تحدث وغير ملزمة بالتدخل او تقديم اي بيانات عن الفني في هذه الحالة</string>
    <string name="conditions_and_terms">الشروط والأحكام</string>
    <string name="conditions_terms_content"><![CDATA[<body dir=\"rtl\"><ul><font color=\"#808080\">  <li><h4>يقوم فريق العمل في بى هاند بإختيار افضل الفنيين و الشركات . </h4></li>  <li><h4>جميع الفنيين و الشركات المتعاقدين مع بى هاند بياناتهم معروفه بالكامل و موقع معهم عقود تضمن حقوق العملاء.</h4></li>  <li><h4>يلتزم مقدم الخدمه وحده بأي أضرار تحدث في مكان التنفيذ كما يلتزم بإعادة الخدمه في حالة عدم تأديتها بصوره جيده و مقبوله طبقا للمعايير الفنيه.  </h4></li>  <li><h4>ولكن يرجي العلم أنه في حاله التعامل مباشرة مع الفني بدون علم الشركه أو حدوث اي تغييرات جذريه في الطلب بدون علم الشركه فأن الشركه تصبح غير مسؤله عن أي مشكله تحدث وغير ملزمه بتقديم اي بيانات عن الفني في هذه الحاله .</h4></li>   <li><h4>الحفاظ علي المتعلقات الشخصيه مسؤولية العميل. </h4></li>  <li><h4>يتم اصلاح ونظافة اي اغراض في مكان العميل والشركه غير مسؤوله عن اي اغراض تنقل من منزل العميل دون علم الشركه .</h4></li>  <li><h4>يلتزم العميل بإبلاغ الشركه قبل دفع اي مبلغ يتعدي 1000 جنيه لمقدم الخدمه.</h4></li></ul></font></body>]]></string>
</resources>
