<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ServiceOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/order_summary_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:text="@string/order_summary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_summary_tv"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/subservice_photo"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/subservice_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/subservice_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/subservice_price_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/order_summary"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact_details_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/order_summary"
                    android:layout_margin="8dp"
                    android:text="@string/enter_contact_details"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_details_tv"
                    android:layout_margin="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:theme="@style/TextInputLayoutAppearance">

                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="8dp"
                                android:hint="@string/name_mandatory"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textAlignment="viewStart" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:theme="@style/TextInputLayoutAppearance">

                            <EditText
                                android:id="@+id/mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="8dp"
                                android:hint="@string/mobile_mandatory"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textAlignment="viewStart" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:theme="@style/TextInputLayoutAppearance">

                            <EditText
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="8dp"
                                android:hint="@string/address_mandatory"
                                android:inputType="textPostalAddress"
                                android:maxLines="1"
                                android:textAlignment="viewStart" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="2"
                            android:gravity="start"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/city_spinner"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:prompt="@string/city_prompt" />

                            <Spinner
                                android:id="@+id/village_spinner"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:prompt="@string/village_prompt" />
                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:theme="@style/TextInputLayoutAppearance">

                            <EditText
                                android:id="@+id/date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="8dp"
                                android:hint="@string/date_mandatory"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textAlignment="viewStart" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:theme="@style/TextInputLayoutAppearance">

                            <EditText
                                android:id="@+id/notes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="8dp"
                                android:hint="@string/notes_mandatory"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textAlignment="viewStart" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/conditions_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree_for_terms_checkbox"
                            android:checked="true"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/orderNow"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/round_corner_button"
            android:padding="8dp"
            android:text="@string/order_now"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
